fixing bug that caused the checkbox ripple to be covered by the header cell on hover when trimming column names is enabled

--- a/app/md-data-table/md-data-table.less
+++ b/app/md-data-table/md-data-table.less
@@ -53,9 +53,10 @@ table[md-data-table] {
     > tbody > tr > td {
       &:first-child {
         width: 18px;
+        padding-right: 24px;
       }
       &:nth-child(2) {
-        padding-left: 24px;
+        padding-left: 0;
       }
     }
   }
